--- a/pom.xml
+++ b/pom.xml
@@ -51,32 +51,37 @@
         <artifactId>dropwizard-hibernate</artifactId>
         <version>1.3.5</version>
     </dependency>
-    <dependency>
-        <groupId>io.dropwizard</groupId>
-        <artifactId>dropwizard-jdbi</artifactId>
-        <version>1.3.5</version>
-    </dependency>
-    <dependency>
-        <groupId>io.dropwizard</groupId>
-        <artifactId>dropwizard-assets</artifactId>
-        <version>1.3.5</version>
-    </dependency>
-    <dependency>
-        <groupId>mysql</groupId>
-        <artifactId>mysql-connector-java</artifactId>
-        <version>5.1.36</version>
-    </dependency>
-    <dependency>
-        <groupId>io.dropwizard</groupId>
-        <artifactId>dropwizard-migrations</artifactId>
-        <version>1.3.5</version>
-    </dependency>
-    <dependency>
-        <groupId>io.dropwizard</groupId>
-        <artifactId>dropwizard-testing</artifactId>
-        <version>1.3.5</version>
-        <scope>test</scope>
-    </dependency>
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-jdbi</artifactId>
+            <version>1.3.5</version>
+        </dependency>
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-assets</artifactId>
+            <version>1.3.5</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.36</version>
+        </dependency>
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-migrations</artifactId>
+            <version>1.3.5</version>
+        </dependency>
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-testing</artifactId>
+            <version>1.3.5</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-auth</artifactId>
+            <version>1.3.7</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
